<resources>
    <string name="app_name">BasicProjectRecyclerView</string>
    <string name="user_id">Id</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_tel">tel</string>
    <string name="num_tel">non</string>
    <string name="tel_picker_title">Tel of user</string>
    <string name="new_user">New User</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="item_user">Item user</string>
    <string name="item_33333">3333333</string>
    <string name="item_44444">4444444</string>
</resources>